--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,16 +36,17 @@
   
   
   @media (min-width: 900px){
+    
     .navbar a.icon {
       display: none;
     }
 
     .active {
-      width: 50px
+      width: auto;
+      height: auto;
     }
 
-  
-    /* Navbar Styling */
+
     .navbar2 {
       display: block;
       list-style: none;
@@ -74,6 +75,19 @@
 
     .top {
       font-size: 40px;
+      justify-content: center;
+      float: right;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-weight: lighter;
+    }
+
+    .container {
+      display: block;
+      overflow: 1px;
+    }
+
+    .container .top {
+      justify-content: center;
     }
 
   
@@ -85,11 +99,25 @@
     .content h1{
       font-size: 45px;
       margin: 40px 0 60px;
+      font-weight: bolder;
+      color: var(--primary);
+    }
+    
+    .content .first{
+      display: none;
     }
 
-    .content p {
+    .content .second {
+      display: flex;
       font-size: 34;
       margin: 40px 0 60px ;
+      font-weight: bolder;
+      color: var(--primary);
+    }
+
+    .content h1:hover, .second:hover {
+      color: var(--light);
+      background: var(--secondary);
     }
 
     #cakes .big-image img {
@@ -98,16 +126,23 @@
     
     .big-cake {
       display: flex;
-      width: 60vh;
-      height: 60vh;
+      /* width: 100%;
+      height: auto; */
     }
+
+    .big-cake img{
+      width: 70%;
+      height: auto;
+    }
+
+
     .intro {
       display: flex;
     }
 
     .buy .grid-flex img {
-      width: 50vh;
-      height: 50vh;
+      width: 100%;
+      height: 90%;
     }
 
     #cakes .buy {
@@ -118,6 +153,7 @@
       display: none;
     }
     .footer2 {
+      display: block;
       list-style: none;
       margin: 0;
       padding: 14px 16px;
@@ -128,6 +164,10 @@
 
     .footer2 li {
       float: left;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      justify-content: center;
     }
 
     .footer2 li a {
